@@ -1,6 +1,6 @@
 Testname: changelog-file-unreleased
 Sequence: 6000
 Version: 2.0
-Description: Supress new date warnings for UNRELEASED
+Description: Suppress new date warnings for UNRELEASED
 Test-Against: latest-debian-changelog-entry-without-new-date
 References: Debian Bug#560149
