@@ -1,5 +1,5 @@
 Testname: files-python-helpers
 Sequence: 6000
 Version: 1.0
-Description: Test tags for missing depends on python helpers
+Description: Test tags for missing depends on Python helpers
 Test-For: missing-dependency-on-python-support
